<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/txtUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent"
        android:fontFamily="sans-serif-condensed"
        android:text="Perbarui Kata"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edIndo"
        android:hint="@string/indonesia_update"/>

    <EditText
        android:id="@+id/edJawa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jawa_update" />

    <Button
        android:id="@+id/btUpdate"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_rotate"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/update"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

</LinearLayout>