<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/outIndo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/kata_indonesia"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="4dp"
            android:gravity="center_vertical"
            android:text="@string/penghubung"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000" />

        <TextView
            android:id="@+id/outJawa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/kata_jawa"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000" />

    </TableRow>

</TableLayout>
